# atemlib

./: .gitignore  readme.md
MediaPool/: MediaPool.cs  MediaPool.csproj
MediaPool/Properties/: AssemblyInfo.cs
MediaUpload/: MediaUpload.cs  MediaUpload.csproj
MediaUpload/Properties/: AssemblyInfo.cs
SwitcherLib/: ConsoleUtils.cs  MediaStill.cs  NativeBridge.cs  Switcher.cs  SwitcherLib.csproj  Upload.cs
SwitcherLib/Properties/: AssemblyInfo.cs
native/atem_bridge/: CMakeLists.txt  atem_bridge.cpp  atem_bridge.h
scripts/: build-bridge-macos.sh
